2010-05-05  Araki Ken  <arakiken@users.sf.net>

	* --button3/button3_behavior option is added.
	  Now pressing button3 shows conf_menu_path_1 program (mlterm-menu)
	  like gnome-terminal by default except in win32. If "xterm" is
	  specified as a value of this option, pressing button3 works like
	  xterm as before.

	* mlterm-menu.c: "Copy" and "Paste" menus are added.
	  "Copy" copys selected text to clipboard.
	  "Paste" works like INSERT_SELECTION.

	* x_screen.c: "selected_text" and "paste" options are added
	  to configuration protocol.

	* ml_term.c: revert_visual argument is added to ml_term_unhighlight_cursor().
	  If revert_visual is 0, ml_term_unhighlight_cursor() leaves ml_term_t logical.
	  start_vt100_cmd functions in x_screen.c and ml_vt100_parser.c are also fixed.

2010-04-29  Araki Ken  <arakiken@users.sf.net>

	* ml_char.c: ML_WHITE | ML_BOLD_COLOR_MASK is used to replace
	  0xe7 color internally instead of ML_WHITE.

	* x_color_cache.h: x_color_cache_256_t is added for caching
	    all 256 colors.
	  x_color_cache.c: Fixed.

	* x_color.h: x_color_t structure is defined instead of
	    typedef X(ft)Color x_color_t in order to shrink x_color_t size.
	  x_color.c: Fixed.

	* man/mlclient.1, man/mlterm.1:
	  Merged id:2988801 patch. (Thanks to Ahmed El-Mahmoudy)

2010-04-17  Araki Ken  <arakiken@users.sf.net>

	* configure.in, mkf/Makefile.in, tool/mlclient/Makefile.in:
	  Merged id:2987646 patch. (Thanks to Ahmed El-Mahmoudy)

	* ml_vt100_parser.[ch]: xterm_listener->start or xterm_listener->stop
	  event is called once from ml_parse_vt100_sequence().
	  Maximum size read from pty in ml_parse_vt100_sequence() is increased
	  from PTY_RD_BUFFER_SIZE to PTY_RD_BUFFER_SIZE * 3.

	* xwindow/version.h.in: 3.0.0 -> 3.0.0 post

2010-04-10  Araki Ken  <arakiken@users.sf.net>

	* 3.0.0 released.
	  (tag "rel-3_0_0")

	* configure.in, mlterm.spec, xwindow/version.h.in,
	  doc/en/ReleaseNote: updated for 3.0.0

	* configure: re-generated
